sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:19: error: 'while' expected but '}' found.
} while (p!=2)
^AlgBubbleSort1:19: error: ';' expected but 'while' found.
} while (p!=2)
  ^AlgBubbleSort1:28: error: Unmatched closing brace '}' ignored here
}
^